M2C-3592 Fix PDP product reviews on IE11

--- a/src/components/reviews/reviews.scss
+++ b/src/components/reviews/reviews.scss
@@ -29,6 +29,10 @@ $reviews_form-submit-button-icon-pos: 'no-icon' !default;
 .cs-reviews {
     flex: 1 1 0;
 
+    .ie11 & {
+        flex-basis: auto;
+    }
+
     @include media('<laptop') {
         border-bottom: $reviews-border;
     }
